[gd_scene load_steps=4 format=3 uid="uid://bkj6n24joqk2v"]

[ext_resource type="Script" uid="uid://dpngupnofbyq1" path="res://scripts/pressure_plate.gd" id="1_g1nay"]
[ext_resource type="Texture2D" uid="uid://bhmj84yfpaeb7" path="res://assets/platform_icon.png" id="2_mxqol"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1nay"]
size = Vector2(30, 30)

[node name="PressurePlate" type="Node2D" groups=["pressure_plates"]]
script = ExtResource("1_g1nay")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mxqol")
script = ExtResource("1_g1nay")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_g1nay")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
